# agenticulture

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  eval_task_a.py  eval_task_b.py  filter_eval_data.py  main.tex  print_results.py  pyproject.toml  references.bib  run_ablations.sh  stream_data.py  track_b_paper.tex
core/: __init__.py  config.py  embeddings.py  prompts.py  utils.py
eval_results/: results_task_a_amazon.json  results_task_a_amazon_raw.json  results_task_a_goodreads.json  results_task_a_goodreads_raw.json  results_task_a_yelp.json  results_task_a_yelp_cf_cotsc.json  results_task_a_yelp_cf_cotsc_raw.json  results_task_a_yelp_cf_mdilu.json  results_task_a_yelp_cf_mdilu_raw.json  results_task_a_yelp_cf_only.json  results_task_a_yelp_cf_only_raw.json  results_task_a_yelp_llm_direct.json  results_task_a_yelp_llm_direct_raw.json  results_task_a_yelp_raw.json  results_task_b_amazon.json  results_task_b_amazon_raw.json  results_task_b_goodreads.json  results_task_b_goodreads_raw.json  results_task_b_yelp.json  results_task_b_yelp_borda_only.json  results_task_b_yelp_borda_only_raw.json  results_task_b_yelp_cosine_only.json  results_task_b_yelp_cosine_only_raw.json  results_task_b_yelp_raw.json  results_task_b_yelp_single_llm.json  results_task_b_yelp_single_llm_raw.json
papers/: track_a_paper.tex
task_a/: Dockerfile  agent.py  main.py  requirements.txt
task_b/: Dockerfile  agent.py  main.py  requirements.txt
tests/: test_core_utils.py  test_endpoints.py  test_task_a_agent.py  test_task_b_agent.py
(+1 files in other folders)
