[project]
name = "agenticulture"
version = "3.0.0"
description = "DSN × BCT LLM Agent Challenge 3.0 — Nigerian-aware user modeling and recommendation agents"
requires-python = ">=3.11"

# Combined dependencies for local development (uv sync).
# Production Docker builds use task_a/requirements.txt and task_b/requirements.txt.
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "langchain-chroma>=0.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    # evaluation framework deps (websocietysimulator)
    "pandas>=2.2.0",
    "nltk>=3.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "tenacity>=8.2.0",
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "scipy>=1.12.0",
    "lmdb>=1.5.0",
    "tiktoken>=0.7.0",
    "rouge-score>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "task_a", "task_b"]

[tool.uv]
# Run `uv sync` to create a venv and install everything.
# Run `uv run uvicorn task_a.main:app --port 8001` to start Task A.
# Run `uv run uvicorn task_b.main:app --port 8002` to start Task B.
